--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@capacitor/android": "^3.4.3",
@@ -23,7 +25,15 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
     "@capacitor/cli": "3.4.3",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-actions": "^6.5.0-alpha.63",
+    "@storybook/addon-essentials": "^6.5.0-alpha.63",
+    "@storybook/addon-links": "^6.5.0-alpha.63",
+    "@storybook/builder-webpack5": "^6.5.0-alpha.63",
+    "@storybook/manager-webpack5": "^6.5.0-alpha.63",
+    "@storybook/vue3": "^6.5.0-alpha.63",
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
@@ -39,14 +49,17 @@
     "@vue/vue3-jest": "^27.0.0-alpha.3",
     "autoprefixer": "^10.4.4",
     "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.4",
     "cypress": "^8.7.0",
     "eslint": "^8.4.1",
+    "eslint-plugin-storybook": "^0.5.9--canary.acfda00.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "vue-loader": "^16.8.3"
   },
   "description": "An Ionic project"
 }
